--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-node_modules
-build
-npm-debug.log
-.env
 .DS_Store
-*.min.js
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/test/unit/coverage/
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
