--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bip32": "^2.0.6",
+    "bip39": "^3.0.4",
     "entropy-collector": "^0.0.1",
+    "ethereumjs-util": "^7.0.10",
+    "seedrandom": "^3.0.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
