--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "dependencies": {
     "bip32": "^2.0.6",
     "bip39": "^3.0.4",
+    "bootstrap": "^5.0.2",
+    "bootstrap-vue": "^2.21.2",
     "entropy-collector": "^0.0.1",
     "ethereumjs-util": "^7.0.10",
+    "qrious": "^4.0.2",
     "seedrandom": "^3.0.5",
     "vue": "^2.5.2",
+    "vue-html-to-paper": "^1.4.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
